--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-zip": "^4.1.0",
     "jquery": "^3.3.1",
     "jquery.scrollto": "^2.1.2",
-    "normalize.css": "^8.0.0"
+    "normalize-scss": "^7.0.1",
+    "tether": "^1.4.4"
   }
 }
